# PandA

./: .gitignore
bag/: CMakeLists.txt  bag.kdev4  main.cpp  main.h  part_1.cpp  part_3.cpp  part_5.cpp  part_6.cpp  strategy.h  util.cpp  util.h
bag/.kdev4/: bag.kdev4  uloha_1.kdev4
bag/data_part4/: gran_m-0,5.txt  gran_m-1,0.txt  gran_m-1,5.txt  gran_n-1,0.txt  gran_v-0,5.txt  gran_v-1,0.txt  gran_v-1,5.txt  price_150.txt  price_250.txt  price_350.txt  price_450.txt  price_50.txt  price_550.txt  sum_0,1.txt  sum_0,2.txt  sum_0,3.txt  sum_0,4.txt  sum_0,5.txt  sum_0,6.txt  sum_0,7.txt  sum_0,8.txt  sum_0,9.txt  sum_1,0.txt  sum_1,2.txt  sum_1,4.txt  sum_1,6.txt  weight_100.txt  weight_200.txt  weight_25.txt  weight_400.txt  weight_50.txt  weight_600.txt
bag_new/bag/: CMakeLists.txt  bag.kdev4
bag_new/bag/.kdev4/: bag.kdev4
bag_new/bag/src/: part_1.cpp  part_3.cpp  util.h
buckets/: Makefile  buckets  buckets.c  buckets.h  buckets.kdev4  data.h
buckets/.kdev4/: buckets.kdev4
sat/: CMakeLists.txt  main.cpp  main.h  part_6.cpp  sat.kdev4  strategy.h  util.cpp  util.h
sat/.kdev4/: sat.kdev4
